fixed alignment and size issues

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -24,7 +24,9 @@ body {
 
 #root {
   min-height: 100dvh;
-  width: 100dvw;
+}
+main {
+  margin: 4.5rem 1rem 0 1rem;
 }
 
 @media only screen and (min-width: 768px) {
@@ -36,9 +38,9 @@ body {
 }
 
 @media only screen and (min-width: 1440px) {
-  #root {
+  main {
     max-width: 68rem;
-    margin-inline: auto;
+    margin: 8.5rem auto 0 auto;
   }
 }
 
