--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -9,4 +9,5 @@
     padding: 0.75rem;
     background-color: var(--clr-chinese-black);
     color: var(--clr-platinum);
+    width: clamp(7.5rem, 8rem + 7dvw ,16rem)
 }
