--- a/src/components/Subreddits/Subreddits.css
+++ b/src/components/Subreddits/Subreddits.css
@@ -4,22 +4,23 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 0.5rem;
 }
+
 .subreddits_list {
     padding: 1rem;
     list-style-type: none;
 }
 
-.subreddits_list > li {
+.subreddits_list>li {
     padding-block: 1rem;
 }
 
-li[aria-current = "true"] {
+li[aria-current="true"] {
     color: var(--clr-old-lavender);
     font-size: 1.25rem;
     font-weight: 800;
 }
 
-.subreddits_list > li:hover {
+.subreddits_list>li:hover {
     cursor: pointer;
     color: var(--clr-old-lavender);
     font-weight: 800;
@@ -28,11 +29,22 @@ li[aria-current = "true"] {
 
 @media only screen and (min-width: 768px) {
     .subreddits_container {
-        width: 25%;
-        max-width: 400px;
-        position: -webkit-sticky; /* Safari */
+        width: 17.6rem;
+        position: -webkit-sticky;
+        /* Safari */
         position: sticky;
-        top: 4.5rem;
+        top: 5.5rem;
         height: fit-content;
     }
-  }
+}
+
+@media only screen and (min-width: 1440px) {
+    .subreddits_container {
+        width: 17.6rem;
+        position: -webkit-sticky;
+        /* Safari */
+        position: sticky;
+        top: 8.5rem;
+        height: fit-content;
+    }
+}
